# image-sharing-api

./: README.md  manage.py  pyproject.toml  pytest.ini
imageshare/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
imageshare/migrations/: 0001_initial.py  0002_rename_created_by_like_liked_by.py  0003_rename_user_follow_created_by.py  0004_alter_follow_options_alter_like_options_and_more.py  0005_follow_unique_follow.py
imageshare/utils/: pagination.py
isa/: asgi.py  google_auth.py  models.py  settings.py  urls.py  wsgi.py
tests/: factories.py  utils.py
tests/unit/: test_follow.py  test_like.py  test_posts.py  test_user.py
users/: admin.py  api.py  models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py  0002_remove_user_email_idx_remove_user_username_idx_and_more.py  0003_user_date_joined.py
users/utils/: pagination.py
